Text fix and spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -40,5 +40,5 @@ body {
 
 p {
   font-size:2em;
-  margin-bottom:35px;
+  margin-bottom:25px;
 }
